# intersect-training-cicd

./: .pre-commit-config.yaml  CHANGELOG  Dockerfile  README.md  index.md  noxfile.py  pyproject.toml
.github/workflows/: main.yml  releases.yml
docs/: conf.py  index.md
src/package/: rescale.py
tests/: test_rescale.py
